adição das funçoes de pesquisa de produtos e adição da tela de cadastro de produtos

--- a/app/templates/products.html
+++ b/app/templates/products.html
@@ -32,7 +32,7 @@
 <table class="products-table">
 
     <tr>
-        <th>Produto</th>
+        <th>Categoria</th>
         <th>Item</th>
         <th>Preço</th>
         <th>Estoque</th>
