--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,7 +16,7 @@
         <nav class="menu">
             <a href="/vendas"><button>Vendas</button></a>
             <a href="/produtos"><button>Produtos</button></a>
-            <a href="/clientes"><button>Clientes</button></a>
+            <a href="/vendedores"><button>Clientes</button></a>
             <a href="/relatorios"><button>Relatórios</button></a>
         </nav>
     </aside>
