corrigido bug que no template eu abri um {% block content %}, mas não fechei com {% endblock %} no final do arquivo.

--- a/app/templates/products.html
+++ b/app/templates/products.html
@@ -36,7 +36,7 @@
         <th>Item</th>
         <th>Preço</th>
         <th>Estoque</th>
-        <th>editar</th>
+        <th>Editar</th>
     </tr>
 
     {% for row in data %}
@@ -65,3 +65,8 @@
 </tr>
 
 {% endfor %}
+
+</table>
+
+{% endblock %}
+
