--- a/app/templates/cadastro_de_produtos.html
+++ b/app/templates/cadastro_de_produtos.html
@@ -69,4 +69,11 @@
 
 </div>
 
+<!-- Botão Voltar -->
+<a href="/produtos" class="btn-voltar-container">
+    <button class="btn-voltar">
+        Voltar
+    </button>
+</a>
+
 {% endblock %}
