--- a/app/templates/cadastro_de_produtos.html
+++ b/app/templates/cadastro_de_produtos.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block extra_css %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='cadastro_de_produtos.css') }}">
+{% endblock %}
+
 {% block content %}
 
 <h2>Cadastrar Produto / Item</h2>
