--- a/app/templates/products.html
+++ b/app/templates/products.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block extra_css %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='products.css') }}">
+{% endblock %}
+
 {% block content %}
 
 <h2>Produtos</h2>
