alterado o nome do botão vendedor para

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,7 +17,7 @@
         <nav class="menu">
             <a href="/vendas"><button>Vendas</button></a>
             <a href="/produtos"><button>Produtos</button></a>
-            <a href="/vendedores"><button>Clientes</button></a>
+            <a href="/vendedores"><button>Vendedores</button></a>
             <a href="/relatorios"><button>Relatórios</button></a>
         </nav>
     </aside>
